--- a/src/less/toast.less
+++ b/src/less/toast.less
@@ -4,6 +4,7 @@
   transform: translateX(-50%);
   bottom: 20px;
   color: #d15a39;
+  border: 1px solid #d15a39;
   background-color: #fff;
   padding: 5px 10px;
   border-radius: 3px;
